@@ -1,0 +1,4 @@
+import xdrlib
+
+xdrlib._test()
+
